<resources>
    <string name="app_name">Free Donation</string>
    <string name="app_name_in" translatable="false">Sedekah Gratis</string>
    <string name="title">Free Donation</string>

    <!--Impression-->
    <string name="impression_title" translatable="false">Bagaimana cara kerjanya?</string>
    <string name="impression_text_1" translatable="false">Darimana aplikasi ini memperoleh uang untuk disedekahkan tanpa ada orang yg mengirimkan uang?</string>
    <string name="impression_text_2" translatable="false">Aplikasi ini diselipi iklan. Penghasilan dari iklan tersebut akan disumbangkan ke salah satu yayasan penyalur sedekah di Indonesia.</string>
    <string name="impression_text_3" translatable="false">Anda juga dapat melihat laporan penghasilan aplikasi ini serta bukti penyaluran sedekah dalam menu "Laporan" pada halaman utama</string>
    <string name="impression_text_4" translatable="false">Bismillah, semoga aplikasi ini bermanfaat.</string>

    <!--Feed-->
    <string name="feed_title">Daily Hadith</string>
    <string name="feed_reload">Reload</string>

    <!--Report-->
    <string name="report_title">Report</string>
    <string name="report_button_text">See Report</string>
    <string name="report_note">You can see income from this app and donation detail here</string>
    <string name="report_note_future_release">In-app report will be added in future release</string>

    <!--Setting-->
    <string name="setting_title">Setting</string>
    <string name="setting_language_label">Language</string>
    <string name="setting_hide_content_detail_label">Show content detail (title, narrator, etc)</string>
    <string name="setting_ad_interstitial_label">Show ad on startup (on stable connection)</string>
    <string name="setting_notification_label">Scheduled reminder</string>
    <string name="setting_notification_list_title">Saved reminder:</string>
    <string name="setting_notification_text_title">Don\'t forget to open me :D</string>
    <string name="setting_notification_count">%1$d reminder set</string>
    <string name="setting_notification_text_content">Free Donation for sure, let\'s open now</string>
    <string name="setting_notification_text_empty">(Empty)</string>

    <!--Share-->
    <string name="share_title">Give words to others</string>
    <string name="share_subject">Free Donation App</string>
    <string name="share_hint">Text included in share</string>
    <string name="share_text_default">Let me recommend you this free donation Android app.</string>
    <string name="share_button_text">Share</string>
    <string name="share_choose_app">Share via …</string>
    <string name="share_fail">Oops, something gone wrong when try to share</string>

    <!--Help-->
    <string name="help_title">Help</string>
    <string name="help_faq_subtitle">F.A.Q</string>
    <string name="help_about_subtitle">About</string>
    <string name="help_about_version_label">App Version (tap to view changelog)</string>
    <string name="help_about_team_label">Developer Team</string>
    <string name="help_about_team_value" translatable="false">Koceeng Dev.</string>
    <string name="help_about_email_label">Developer Email</string>
    <string name="help_about_email_address" translatable="false">hello@koceeng.com</string>
    <string name="help_about_email_subject">Help about Free Donation app</string>
    <string name="help_about_email_choose_note">Choose your preferred email app</string>

    <!--Changelog-->
    <string name="changelog_title">Versions and Changelist</string>
    <string name="changelog_subtitle">For nerds.., COOL NERDS</string>
    <string name="changelog_loading">Please wait while we peek at the cloud</string>
    <string name="changelog_error_message">Something goes wrong when checking changelog</string>

    <!--Bank Account-->
    <string name="bank_account_button">View Bank Account Numbers</string>
    <string name="bank_account_title">Bank Account Numbers</string>
    <string name="bank_account_subtitle">Here are some bank account numbers that can be transferred to if you want to donate for charity:</string>
    <string name="bank_account_loading">Please wait while we peek at the cloud</string>
    <string name="bank_account_error_message">Something goes wrong when checking bank account numbers</string>
    <string name="bank_account_copy_tag">Bank Account Number</string>
    <string name="bank_account_copied">Detail copied</string>

    <!--Update-->
    <string name="update_check_fail_message">Cannot check latest version of this application. Some features may cause errors</string>
    <string name="update_message">Application ready to update</string>
    <string name="update_message_critical">This version is no longer supported. You must update to continue using this app</string>
    <string name="update_message_optional">New app will have latest feature and bug fixes. Go on, try it</string>
    <string name="update_button_text">Update Now</string>
    <string name="update_button_later">Later</string>

    <!--Actions-->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="understand">I Understand</string>
    <string name="exit">Exit</string>
    <string name="dismiss">Dismiss</string>
    <string name="next">Next</string>
    <string name="next_uppercase">NEXT</string>
    <string name="previous">Previous</string>
    <string name="or">Or</string>
    <string name="refresh">Refresh</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="back">Go Back</string>
    <string name="but">But </string>
    <string name="and">And </string>
    <string name="not_ready">Currently getting data from the web. Try again in a few second</string>

    <!--Others-->
    <string name="application_not_active">Application no longer supported or something gone wrong when checking it online.</string>
    <string name="application_not_active_sub">Please try again later</string>
    <string name="double_back_to_exit">Press \"Back\" again to exit this app</string>
    <string name="ellipsize">&#8230;</string>
    <string name="loading_message">Loading &#8230;</string>
    <string name="sorry_title">Sorry,</string>
    <string name="error_title">Oops :(</string>

</resources>
