<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="100dp"
        android:paddingBottom="@dimen/space_default"
        android:paddingStart="@dimen/space_default"
        android:paddingEnd="@dimen/space_default"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/space_double"
            android:gravity="center_horizontal"
            android:textColor="@color/colorThemeWhite"
            android:textSize="@dimen/text_large"
            android:text="@string/impression_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_default"
            android:gravity="center_horizontal"
            android:textColor="@color/colorThemeWhite"
            android:textSize="@dimen/text_default"
            android:text="@string/impression_text_1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_default"
            android:gravity="center_horizontal"
            android:textColor="@color/colorThemeWhite"
            android:textSize="@dimen/text_default"
            android:text="@string/impression_text_2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_default"
            android:gravity="center_horizontal"
            android:textColor="@color/colorThemeWhite"
            android:textSize="@dimen/text_default"
            android:text="@string/impression_text_3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/colorThemeWhite"
            android:textSize="@dimen/text_default"
            android:text="@string/impression_text_4"/>

        <Button
            style="@style/AppButtonAlt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_double"
            android:layout_marginBottom="@dimen/space_double"
            android:layout_gravity="end"
            android:text="@string/next"
            android:onClick="actionImpressionNext"/>

    </LinearLayout>

</ScrollView>