<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/space_default">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_notification_list_title" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/setting_alarm_recyclerview_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:visibility="gone"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/setting_alarm_empty_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_mini"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/space_default"
            android:gravity="center_vertical"
            android:text="@string/setting_notification_text_empty"
            android:textColor="@color/colorThemeGrayDark"
            android:textSize="@dimen/text_default" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/setting_alarm_button_cancel"
                style="@style/AppButtonBorderlessColored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/dismiss" />

            <Button
                android:id="@+id/setting_alarm_button_add"
                style="@style/AppButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/add" />

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>