<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/help_layout_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/space_triple"
    android:visibility="gone">

    <FrameLayout
        android:id="@+id/help_progress"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:visibility="invisible">

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:indeterminate="true"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/help_progress"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/space_triple"
        android:orientation="vertical">

        <TextView
            android:id="@+id/help_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/space_small"
            android:paddingStart="@dimen/space_default"
            android:paddingEnd="@dimen/space_default"
            android:textSize="@dimen/text_extra_big"
            android:textColor="@color/colorPrimary"
            android:text="@string/help_title"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/space_default"
            android:layout_marginStart="@dimen/space_default"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/space_default"
            android:paddingEnd="@dimen/space_default"
            android:gravity="end"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_default"
            android:text="@string/help_faq_subtitle"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/help_recyclerview_faq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small"
            android:layout_marginBottom="@dimen/space_default"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="@dimen/space_default"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/space_default"
            android:paddingEnd="@dimen/space_default"
            android:gravity="end"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_default"
            android:text="@string/help_about_subtitle"/>

    </LinearLayout>

</RelativeLayout>